fix overflow

--- a/src/app/about/page.module.scss
+++ b/src/app/about/page.module.scss
@@ -1,9 +1,8 @@
 @import "./../breakpoints.scss";
 .page {
     width: 100vw;
-    height: 100vh; /* Fullscreen */
     display: flex;
-    row-gap: 5rem;
+    row-gap: 12rem;
     background: var(--primary-one);
     flex-direction: column;
     align-items: center;
@@ -33,7 +32,8 @@
         border-radius: 2rem;
         padding: 1rem;
         display: inline-block;
-        transform-origin: bottom left
+        transform-origin: bottom left;
+        color: white
     }
 
     .reach {
